# KittyCode

./: .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  pyproject.toml
kittycode/: __init__.py  __main__.py  agent.py  cli.py  cli_reference.py  config.py  context.py  interrupts.py  llm.py  main.py  prompt.py  skills.py
kittycode/config/: __init__.py  presets.py  settings.py  tui.py
kittycode/llm/: __init__.py  provider.py
kittycode/prompt/: __init__.py  builder.py
kittycode/runtime/: __init__.py  agent.py  logging.py  session.py
kittycode/skills/: __init__.py  discovery.py
kittycode/tools/: __init__.py  agent.py  ask_user.py  base.py  bash.py  brief.py  edit.py  glob_tool.py  grep.py  read.py  skill.py  todo_write.py  web_fetch.py  web_search.py  write.py
tests/: test_bash_streaming.py  test_cli.py  test_core.py  test_interrupt_latency.py  test_llm.py  test_skills.py  test_tools.py
