[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kittycode"
version = "0.1.4"
description = "Minimal AI coding agent with a simple tool loop and skill support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jimmy Ye", email = "jiming_ye@163.com" },
]
keywords = ["ai", "agent", "coding", "cli", "llm"]
dependencies = [
    "anthropic>=0.84.0",
    "beautifulsoup4>=4.12",
    "openai>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["kittycode"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
kittycode = "kittycode.cli:main"

[project.urls]
Homepage = "https://github.com/yejiming/KittyCode"
Repository = "https://github.com/yejiming/KittyCode"